# semaphore-identity-eg

./: .gitignore  .todo  Cargo.toml  README.md  index.ts  package.json
contracts/: deployments.json
contracts/cli/: README.md
contracts/script/: Counter.s.sol  Semaphore.s.sol
contracts/src/: package.json
contracts/test/: Counter.t.sol  Semaphore.t.sol
scripts/: README.md
sdk-rs/: Cargo.toml
sdk-rs/examples/: create_id_deterministic.rs  create_id_random.rs  e2e.rs  recover_id_random.rs
sdk-rs/src/: main.rs
src/: group_offchain.ts  group_offchain_depth.ts  group_offchain_members.ts  id_deterministic.ts  id_random.ts
