[package]
name = "sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", features = ["depth_20"]}

# random number as seed for random identity
rand = "0.8.5"
